# cs-primer

./: .envrc  .gitignore  README.md  justfile  pyproject.toml  requirements.txt
algorithms-and-data-structures/: 1.ipynb  binary-search.ipynb  calculator.ipynb  deque.ipynb  euler-p1.ipynb  fast-exponent.ipynb  jug-pouring.ipynb  merge-sort.ipynb  paren-match.ipynb  pstree.ipynb  quick-sort.ipynb  roman-numerals.ipynb  staircase.ipynb  stretch.rkt  word-ladder.ipynb
algorithms-and-data-structures/problem-solving/: binary-search.ipynb  staircase.ipynb
computer-networking/: README.md
computer-networking/shout-server/: README.md  shout-server.c
computer-systems/bits-and-bytes/beep-boop/: beep-boop.py
computer-systems/bits-and-bytes/css-colour-convert/: converter.ipynb
computer-systems/bits-and-bytes/image-rotate/: image-rotate.ipynb
computer-systems/bits-and-bytes/protobuf-varint/: varint.ipynb  varint.py
computer-systems/intro-to-c/: bitcount.c
computer-systems/intro-to-c/hello-world/: hello_world.c
